[gd_scene load_steps=16 format=3 uid="uid://c6qvxkw7yf1yd"]

[ext_resource type="Script" uid="uid://b3hs1u0d10nyn" path="res://scripts/main.gd" id="1_abcde"]
[ext_resource type="Script" uid="uid://dgudqpmx1nxlv" path="res://scripts/farmer.gd" id="2_farmer"]
[ext_resource type="Script" uid="uid://c4es4stvnr225" path="res://scripts/baker.gd" id="3_baker"]
[ext_resource type="Script" uid="uid://bii8ulb1hgvyu" path="res://scripts/field_plot.gd" id="4_field"]
[ext_resource type="Script" uid="uid://l4x615g7rjbk" path="res://scripts/household_agent.gd" id="5_household_agent"]
[ext_resource type="Script" path="res://scripts/components/wallet.gd" id="6_wallet"]
[ext_resource type="Script" path="res://scripts/components/inventory.gd" id="7_inventory"]
[ext_resource type="Script" path="res://scripts/components/hunger_need.gd" id="8_hunger_need"]
[ext_resource type="Script" path="res://scripts/components/food_stockpile.gd" id="9_food_stockpile"]
[ext_resource type="Script" path="res://scripts/calendar.gd" id="10_calendar"]
[ext_resource type="Script" path="res://scripts/components/route_runner.gd" id="11_route_runner"]
[ext_resource type="Script" path="res://scripts/components/inventory_capacity.gd" id="12_inventory_capacity"]
[ext_resource type="Script" path="res://scripts/components/production_batch.gd" id="13_production_batch"]
[ext_resource type="Script" path="res://scripts/components/production_profitability.gd" id="14_production_profitability"]
[ext_resource type="Script" path="res://scripts/components/food_reserve.gd" id="15_food_reserve"]
[ext_resource type="Script" path="res://scripts/components/margin_compression.gd" id="16_margin_compression"]
[ext_resource type="Script" path="res://scripts/components/inventory_throttle.gd" id="17_inventory_throttle"]

[node name="Main" type="Node"]
script = ExtResource("1_abcde")

[node name="MarketNode" type="Node2D" parent="."]
position = Vector2(338, 305)

[node name="MarketMarker" type="ColorRect" parent="MarketNode"]
offset_left = -15.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 16.0
color = Color(1, 0.2, 0.2, 1)

[node name="Bakery" type="Node2D" parent="."]
position = Vector2(350, 450)

[node name="BakeryMarker" type="ColorRect" parent="Bakery"]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(1, 0.8, 0.2, 1)

[node name="House" type="Node2D" parent="."]
position = Vector2(120, 520)

[node name="HouseMarker" type="ColorRect" parent="House"]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(0.2, 0.5, 1, 1)

[node name="Field1" type="Node2D" parent="."]
position = Vector2(220, 520)
script = ExtResource("4_field")

[node name="Field1Marker" type="ColorRect" parent="Field1"]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(0.4, 0.3, 0.1, 1)

[node name="Field2" type="Node2D" parent="."]
position = Vector2(320, 520)
script = ExtResource("4_field")

[node name="Field2Marker" type="ColorRect" parent="Field2"]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(0.4, 0.3, 0.1, 1)

[node name="Farmer" type="CharacterBody2D" parent="."]
position = Vector2(120, 520)
script = ExtResource("2_farmer")

[node name="FarmerSprite" type="ColorRect" parent="Farmer"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.2, 1, 0.2, 1)

[node name="Wallet" type="Node" parent="Farmer"]
script = ExtResource("6_wallet")

[node name="Inventory" type="Node" parent="Farmer"]
script = ExtResource("7_inventory")

[node name="HungerNeed" type="Node" parent="Farmer"]
script = ExtResource("8_hunger_need")

[node name="FoodStockpile" type="Node" parent="Farmer"]
script = ExtResource("9_food_stockpile")

[node name="RouteRunner" type="Node" parent="Farmer"]
script = ExtResource("11_route_runner")

[node name="InventoryCapacity" type="Node" parent="Farmer"]
script = ExtResource("12_inventory_capacity")

[node name="ProductionProfitability" type="Node" parent="Farmer"]
script = ExtResource("14_production_profitability")

[node name="InventoryThrottle" type="Node" parent="Farmer"]
script = ExtResource("17_inventory_throttle")

[node name="FoodReserve" type="Node" parent="Farmer"]
script = ExtResource("15_food_reserve")

[node name="Baker" type="CharacterBody2D" parent="."]
position = Vector2(350, 450)
script = ExtResource("3_baker")

[node name="BakerSprite" type="ColorRect" parent="Baker"]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.8, 0.6, 0.2, 1)

[node name="Wallet" type="Node" parent="Baker"]
script = ExtResource("6_wallet")

[node name="Inventory" type="Node" parent="Baker"]
script = ExtResource("7_inventory")

[node name="HungerNeed" type="Node" parent="Baker"]
script = ExtResource("8_hunger_need")

[node name="FoodStockpile" type="Node" parent="Baker"]
script = ExtResource("9_food_stockpile")

[node name="RouteRunner" type="Node" parent="Baker"]
script = ExtResource("11_route_runner")

[node name="InventoryCapacity" type="Node" parent="Baker"]
script = ExtResource("12_inventory_capacity")

[node name="ProductionBatch" type="Node" parent="Baker"]
script = ExtResource("13_production_batch")

[node name="ProductionProfitability" type="Node" parent="Baker"]
script = ExtResource("14_production_profitability")

[node name="MarginCompression" type="Node" parent="Baker"]
script = ExtResource("16_margin_compression")

[node name="InventoryThrottle" type="Node" parent="Baker"]
script = ExtResource("17_inventory_throttle")

[node name="FoodReserve" type="Node" parent="Baker"]
script = ExtResource("15_food_reserve")

[node name="HouseholdHome" type="Node2D" parent="."]
position = Vector2(177, 287)

[node name="HouseholdHomeMarker" type="ColorRect" parent="HouseholdHome"]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
color = Color(0.8, 0.2, 0.8, 1)

[node name="HouseholdAgent" type="CharacterBody2D" parent="."]
position = Vector2(177, 288)
script = ExtResource("5_household_agent")

[node name="HouseholdSprite" type="ColorRect" parent="HouseholdAgent"]
offset_left = -10.0
offset_top = -12.0
offset_right = 10.0
offset_bottom = 8.0
color = Color(1, 0.4, 1, 1)

[node name="Wallet" type="Node" parent="HouseholdAgent"]
script = ExtResource("6_wallet")

[node name="Inventory" type="Node" parent="HouseholdAgent"]
script = ExtResource("7_inventory")

[node name="HungerNeed" type="Node" parent="HouseholdAgent"]
script = ExtResource("8_hunger_need")

[node name="FoodStockpile" type="Node" parent="HouseholdAgent"]
script = ExtResource("9_food_stockpile")

[node name="RouteRunner" type="Node" parent="HouseholdAgent"]
script = ExtResource("11_route_runner")

[node name="InventoryCapacity" type="Node" parent="HouseholdAgent"]
script = ExtResource("12_inventory_capacity")

[node name="FoodReserve" type="Node" parent="HouseholdAgent"]
script = ExtResource("15_food_reserve")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUDRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Layout" type="HBoxContainer" parent="UI/HUDRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WorldSpacer" type="Control" parent="UI/HUDRoot/Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sidebar" type="PanelContainer" parent="UI/HUDRoot/Layout"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="SidebarVBox" type="VBoxContainer" parent="UI/HUDRoot/Layout/Sidebar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardsScroll" type="ScrollContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox"]
custom_minimum_size = Vector2(0, 260)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cards" type="VBoxContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FarmerCard" type="PanelContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards"]
layout_mode = 2

[node name="FarmerVBox" type="VBoxContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard"]
layout_mode = 2

[node name="FarmerTitle" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Farmer"

[node name="FarmerStatus" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Status: Waiting"

[node name="FarmerMoney" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Farmer Money: $0.00"

[node name="FarmerSeeds" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Farmer Seeds: 0"

[node name="FarmerWheat" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Farmer Wheat: 0"

[node name="FarmerBread" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Farmer Bread: 0"

[node name="FarmerDaysUntilStarve" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Farmer Days Until Starve: 3"

[node name="FarmerStarving" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Farmer Starving: No"

[node name="FarmerInventory" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/FarmerCard/FarmerVBox"]
layout_mode = 2
text = "Inventory: 0 / 50"

[node name="HSeparator1" type="HSeparator" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards"]
layout_mode = 2

[node name="BakerCard" type="PanelContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards"]
layout_mode = 2

[node name="BakerVBox" type="VBoxContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard"]
layout_mode = 2

[node name="BakerTitle" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Baker"

[node name="BakerStatus" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Status: Waiting"

[node name="BakerMoney" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Baker Money: $0.00"

[node name="BakerWheat" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Baker Wheat: 0"

[node name="BakerFlour" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Baker Flour: 0"

[node name="BakerBread" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Baker Bread: 0"

[node name="BakerFoodBread" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Baker Food Bread: 0"

[node name="BakerDaysUntilStarve" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Baker Days Until Starve: 3"

[node name="BakerStarving" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Baker Starving: No"

[node name="BakerInventory" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/BakerCard/BakerVBox"]
layout_mode = 2
text = "Inventory: 0 / 50"

[node name="HSeparator2" type="HSeparator" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards"]
layout_mode = 2

[node name="HouseholdCard" type="PanelContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards"]
layout_mode = 2

[node name="HouseholdVBox" type="VBoxContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard"]
layout_mode = 2

[node name="HouseholdTitle" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard/HouseholdVBox"]
layout_mode = 2
text = "Household"

[node name="HouseholdStatus" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard/HouseholdVBox"]
layout_mode = 2
text = "Status: Waiting"

[node name="HouseholdMoney" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard/HouseholdVBox"]
layout_mode = 2
text = "Household Money: $0.00"

[node name="HouseholdBread" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard/HouseholdVBox"]
layout_mode = 2
text = "Household Bread: 0"

[node name="HouseholdBreadConsumed" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard/HouseholdVBox"]
layout_mode = 2
text = "Household Bread Consumed: 0"

[node name="HouseholdHunger" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard/HouseholdVBox"]
layout_mode = 2
text = "Household Hunger: 5/5"

[node name="HouseholdStarving" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard/HouseholdVBox"]
layout_mode = 2
text = "Household Starving: No"

[node name="HouseholdInventory" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/HouseholdCard/HouseholdVBox"]
layout_mode = 2
text = "Inventory: 0 / 50"

[node name="HSeparator3" type="HSeparator" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards"]
layout_mode = 2

[node name="MarketCard" type="PanelContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards"]
layout_mode = 2

[node name="MarketVBox" type="VBoxContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard"]
layout_mode = 2

[node name="MarketTitle" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Market"

[node name="MarketMoney" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Market Money: $0.00"

[node name="MarketSeeds" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Market Seeds: 0"

[node name="MarketWheat" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Market Wheat: 0"

[node name="MarketWheatCap" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Market Wheat: 0/100"

[node name="MarketBread" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Market Bread: 0"

[node name="MarketBreadCap" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Market Bread: 0/200"

[node name="WheatPrice" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Wheat Price: $1.00 (floor $0.50)"

[node name="BreadPrice" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/CardsScroll/Cards/MarketCard/MarketVBox"]
layout_mode = 2
text = "Bread Price: $2.50 (floor $1.00)"

[node name="HSeparator4" type="HSeparator" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox"]
layout_mode = 2

[node name="LogPanel" type="PanelContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="LogVBox" type="VBoxContainer" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/LogPanel"]
layout_mode = 2

[node name="LogTitle" type="Label" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/LogPanel/LogVBox"]
layout_mode = 2
text = "Event Log"

[node name="EventLog" type="RichTextLabel" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/LogPanel/LogVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = false

[node name="ExportLogButton" type="Button" parent="UI/HUDRoot/Layout/Sidebar/SidebarVBox/LogPanel/LogVBox"]
layout_mode = 2
text = "Export Log"

